correcting titles overflow on restaurants pages

--- a/sass/css/pages.scss
+++ b/sass/css/pages.scss
@@ -194,6 +194,7 @@
             white-space: nowrap;
             text-overflow: ellipsis;
             overflow: hidden;
+            padding-right: 50px;
         }
     }
 
@@ -305,6 +306,7 @@
             white-space: nowrap;
             text-overflow: ellipsis;
             overflow: hidden;
+            padding-right: 50px;
         }
     }
     .fas.fa-check-circle {
@@ -415,6 +417,7 @@
             white-space: nowrap;
             text-overflow: ellipsis;
             overflow: hidden;
+            padding-right: 50px;
         }
     }
     .fas.fa-check-circle {
